--- a/IIS_CD_Webhook/nlog.config
+++ b/IIS_CD_Webhook/nlog.config
@@ -3,25 +3,39 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="internal-nlog.txt">
+      internalLogFile="c:\temp\internal-nlog-AspNetCore.txt">
+
+	<!-- enable asp.net core layout renderers -->
 	<extensions>
-		<add assembly="NLog.Web.AspNetCore" />
+		<add assembly="NLog.Web.AspNetCore"/>
 	</extensions>
-	<targets async="true">
-		<target xsi:type="File" name="debuglog"
-				fileName="${aspnet-appbasepath}/logs/debug-${shortdate}.log"
-				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message}|url: ${aspnet-request-url:IncludeQueryString=true}" />
-		<target xsi:type="File" name="infolog"
-				fileName="${aspnet-appbasepath}/logs/info-${shortdate}.log"
-				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url:IncludeQueryString=true}" />
-		<target xsi:type="File" name="errorlog"
-				fileName="${aspnet-appbasepath}/logs/error-${shortdate}.log"
-				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|user: ${aspnet-user-identity} |url: ${aspnet-request-url:IncludeQueryString=true}|action: ${aspnet-request-form}" />
+
+	<!-- the targets to write to -->
+	<targets>
+		<!-- File Target for all log messages with basic details -->
+		<target xsi:type="File" name="allfile" fileName="c:\temp\deploy\nlog-AspNetCore-all-${shortdate}.log"
+				layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />
+
+		<!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
+		<target xsi:type="File" name="ownFile-web" fileName="c:\temp\deploy\nlog-AspNetCore-own-${shortdate}.log"
+				layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
+
+		<!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
+		<target xsi:type="Console" name="lifetimeConsole" layout="${MicrosoftConsoleLayout}" />
 	</targets>
+
+	<!-- rules to map from logger name to target -->
 	<rules>
-		<logger name="*" maxlevel="Debug" writeTo="debuglog" />
-		<logger name="Microsoft.*" maxLevel="Info" final="true" />
-		<logger name="*" levels="Error,Fatal,Warn" writeTo="errorlog" />
-		<logger name="*" minlevel="Info" writeTo="infolog" />
+		<!--All logs, including from Microsoft-->
+		<logger name="*" minlevel="Trace" writeTo="allfile" />
+
+		<!--Output hosting lifetime messages to console target for faster startup detection -->
+		<logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="lifetimeConsole, ownFile-web" final="true" />
+
+		<!--Skip non-critical Microsoft logs and so log only own logs (BlackHole) -->
+		<logger name="Microsoft.*" maxlevel="Info" final="true" />
+		<logger name="System.Net.Http.*" maxlevel="Info" final="true" />
+
+		<logger name="*" minlevel="Trace" writeTo="ownFile-web" />
 	</rules>
 </nlog>
